Bug 286301 - crash mixing mobile with desktop
Summary: crash mixing mobile with desktop
Status: RESOLVED FIXED
Alias: None
Product: Active
Classification: Unmaintained
Component: Keyboard (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: unscheduled
Assignee: active
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-10 21:24 UTC by Jaime Torres
Modified: 2011-12-07 16:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jaime Torres 2011-11-10 21:24:02 UTC
Application: plasma-keyboardcontainer (0.1)
KDE Platform Version: 4.7.3 (4.7.3) (Compiled from sources)
Qt Version: 4.7.4
Operating System: Linux 3.1.0-rc9-1-desktop x86_64
Distribution: "openSUSE 12.1 RC 1 (x86_64)"

-- Information about the crash:
- What I was doing when the application crashed:

I compiled plasma-mobile and executed it in the same machine that usually executes plasma-desktop.
Then I came back to plasma-desktop.
At every plasma-desktop session init, the same crash.

Probably I should not have done that, but I did.

The crash can be reproduced every time.

-- Backtrace:
Application: Container for on screen keyboard (kdeinit4), signal: Segmentation fault
[KCrash Handler]
#6  0x00007f13aa4d36d2 in QScopedPointer<QGraphicsItemPrivate, QScopedPointerDeleter<QGraphicsItemPrivate> >::operator-> (this=0x18) at ../../include/QtCore/../../../../kdegit/qt/src/corelib/tools/qscopedpointer.h:112
#7  0x00007f13aa4b487b in QGraphicsItem::setFlag (this=0x10, flag=QGraphicsItem::ItemIsMovable, enabled=false) at /g/kdegit/qt/src/gui/graphicsview/qgraphicsitem.cpp:1808
#8  0x00007f13ac82547b in KeyboardDialog::__base_ctor (this=0x103c0e0, corona=<optimized out>, containment=<optimized out>, pluginName=<optimized out>, appletArgs=<optimized out>, parent=0x0, appletId=1) at /g/kdegit/plasma-mobile/virtualkeyboard/keyboardshell/keyboarddialog.cpp:92
#9  0x00007f13ac82586e in PlasmaApp::newInstance (this=0xd680b0) at /g/kdegit/plasma-mobile/virtualkeyboard/keyboardshell/plasmaapp.cpp:136
#10 0x00007f13abf7726b in KUniqueApplicationAdaptor::newInstance (this=0xe96590, asn_id=..., args=...) at /g/kdegit/kdelibs/kdeui/kernel/kuniqueapplication.cpp:442
#11 0x00007f13abf772fa in KUniqueApplicationAdaptor::qt_metacall (this=0xe96590, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7fffcc199990) at /g/b45/kdelibs/kdeui/kuniqueapplication_p.moc:81
#12 0x00007f13ab270bed in QDBusConnectionPrivate::deliverCall (this=0xc36d00, object=0xe96590, msg=..., metaTypes=..., slotIdx=4) at /g/kdegit/qt/src/dbus/qdbusintegrator.cpp:942
#13 0x00007f13ab270395 in QDBusConnectionPrivate::activateCall (this=0xc36d00, object=0xe96590, flags=337, msg=...) at /g/kdegit/qt/src/dbus/qdbusintegrator.cpp:845
#14 0x00007f13ab274345 in QDBusConnectionPrivate::activateObject (this=0xc36d00, node=..., msg=..., pathStartPos=16) at /g/kdegit/qt/src/dbus/qdbusintegrator.cpp:1410
#15 0x00007f13ab274cba in QDBusActivateObjectEvent::placeMetaCall (this=0xf2fc00) at /g/kdegit/qt/src/dbus/qdbusintegrator.cpp:1524
#16 0x00007f13aaed662c in QObject::event (this=0xd680b0, e=0xf2fc00) at /g/kdegit/qt/src/corelib/kernel/qobject.cpp:1217
#17 0x00007f13aaebf939 in QCoreApplication::event (this=0xd680b0, e=0xf2fc00) at /g/kdegit/qt/src/corelib/kernel/qcoreapplication.cpp:1616
#18 0x00007f13a9d66868 in QApplication::event (this=0xd680b0, e=0xf2fc00) at /g/kdegit/qt/src/gui/kernel/qapplication.cpp:2522
#19 0x00007f13a9d6c3ce in QApplicationPrivate::notify_helper (this=0xc6ba80, receiver=0xd680b0, e=0xf2fc00) at /g/kdegit/qt/src/gui/kernel/qapplication.cpp:4509
#20 0x00007f13a9d69a14 in QApplication::notify (this=0xd680b0, receiver=0xd680b0, e=0xf2fc00) at /g/kdegit/qt/src/gui/kernel/qapplication.cpp:3909
#21 0x00007f13abf7035e in KApplication::notify (this=0xd680b0, receiver=0xd680b0, event=0xf2fc00) at /g/kdegit/kdelibs/kdeui/kernel/kapplication.cpp:311
#22 0x00007f13aaebde56 in QCoreApplication::notifyInternal (this=0xd680b0, receiver=0xd680b0, event=0xf2fc00) at /g/kdegit/qt/src/corelib/kernel/qcoreapplication.cpp:787
#23 0x00007f13aaec1b53 in QCoreApplication::sendEvent (receiver=0xd680b0, event=0xf2fc00) at ../../include/QtCore/../../../../kdegit/qt/src/corelib/kernel/qcoreapplication.h:215
#24 0x00007f13aaebf077 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0xc0a2c0) at /g/kdegit/qt/src/corelib/kernel/qcoreapplication.cpp:1428
#25 0x00007f13aaebec99 in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at /g/kdegit/qt/src/corelib/kernel/qcoreapplication.cpp:1321
#26 0x00007f13aaef6e8f in QCoreApplication::sendPostedEvents () at ../../include/QtCore/../../../../kdegit/qt/src/corelib/kernel/qcoreapplication.h:220
#27 0x00007f13aaef5e6b in postEventSourceDispatch (s=0xc0e270) at /g/kdegit/qt/src/corelib/kernel/qeventdispatcher_glib.cpp:277
#28 0x00007f13a568258d in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#29 0x00007f13a5682d88 in ?? () from /usr/lib64/libglib-2.0.so.0
#30 0x00007f13a5682f59 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#31 0x00007f13aaef6741 in QEventDispatcherGlib::processEvents (this=0xd1bb80, flags=...) at /g/kdegit/qt/src/corelib/kernel/qeventdispatcher_glib.cpp:422
#32 0x00007f13a9e42d0c in QGuiEventDispatcherGlib::processEvents (this=0xd1bb80, flags=...) at /g/kdegit/qt/src/gui/kernel/qguieventdispatcher_glib.cpp:204
#33 0x00007f13aaebba28 in QEventLoop::processEvents (this=0x7fffcc19abe0, flags=...) at /g/kdegit/qt/src/corelib/kernel/qeventloop.cpp:149
#34 0x00007f13aaebbb7b in QEventLoop::exec (this=0x7fffcc19abe0, flags=...) at /g/kdegit/qt/src/corelib/kernel/qeventloop.cpp:201
#35 0x00007f13aaebe542 in QCoreApplication::exec () at /g/kdegit/qt/src/corelib/kernel/qcoreapplication.cpp:1064
#36 0x00007f13a9d6958c in QApplication::exec () at /g/kdegit/qt/src/gui/kernel/qapplication.cpp:3783
#37 0x00007f13ac826163 in kdemain (argc=1, argv=0xd1baf0) at /g/kdegit/plasma-mobile/virtualkeyboard/keyboardshell/main.cpp:46
#38 0x000000000040845a in launch (argc=1, _name=0xcd1d88 "/opt/kde4/bin/plasma-keyboardcontainer", args=<optimized out>, cwd=0x0, envc=<optimized out>, envs=<optimized out>, reset_env=false, tty=0x0, avoid_loops=false, startup_id_str=0x40c019 "0") at /g/kdegit/kdelibs/kinit/kinit.cpp:734
#39 0x0000000000408d4c in handle_launcher_request (sock=8, who=<optimized out>) at /g/kdegit/kdelibs/kinit/kinit.cpp:1226
#40 0x00000000004093d4 in handle_requests (waitForPid=0) at /g/kdegit/kdelibs/kinit/kinit.cpp:1419
#41 0x00000000004055b4 in main (argc=4, argv=0x7fffcc19b818, envp=0x7fffcc19b840) at /g/kdegit/kdelibs/kinit/kinit.cpp:1907

Reported using DrKonqi
Comment 1 Aaron J. Seigo 2011-12-07 16:22:52 UTC
Git commit fa3bd767b556c3dbc59c5b03949ec714d6f2cf0a by Aaron Seigo.
Committed on 07/12/2011 at 17:21.
Pushed by aseigo into branch 'master'.

exit sooner when the keyboard applet fails to load

BUG:286301

M  +7    -7    virtualkeyboard/keyboardshell/keyboarddialog.cpp

http://commits.kde.org/plasma-mobile/fa3bd767b556c3dbc59c5b03949ec714d6f2cf0a