exit sooner when the keyboard applet fails to load

BUG:286301